@@ -1,6 +1,10 @@
-# ChangeLog for net-im/psi-image
+# ChangeLog for net-im/psi-cleaner
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  21 Oct 2010; Nikoli <nikoli@lavabit.com>
+  +psi-cleaner-0.2.7_pre3076.ebuild:
+  version bump
 
   07 Aug 2009; A. Vinogradov <spamslepnoga@inbox.ru> ChangeLog:
   create ChangeLog
